shaku/tests/ui/circular_dependency_compile_time.stderr
error[E0275]: overflow evaluating the requirement `TestModule: HasComponent<(dyn Component1Trait + 'static)>`
  --> tests/ui/circular_dependency_compile_time.rs:28:1
   |
28 | / module! {
29 | |     TestModule {
30 | |         components = [Component1, Component2],
31 | |         providers = [],
32 | |         interfaces = [],
33 | |     }
34 | | }
   | |_^
   |
note: required for `Component2` to implement `shaku::Component<TestModule>`
  --> tests/ui/circular_dependency_compile_time.rs:19:10
   |
19 | #[derive(Component)]
   |          ^^^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
20 | #[shaku(interface = Component2Trait)]
21 | struct Component2 {
   |        ^^^^^^^^^^
   = note: this error originates in the macro `module` which comes from the expansion of the derive macro `Component` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0275]: overflow evaluating the requirement `TestModule: HasComponent<(dyn Component1Trait + 'static)>`
  --> tests/ui/circular_dependency_compile_time.rs:29:5
   |
29 |     TestModule {
   |     ^^^^^^^^^^
   |
note: required for `Component2` to implement `shaku::Component<TestModule>`
  --> tests/ui/circular_dependency_compile_time.rs:19:10
   |
19 | #[derive(Component)]
   |          ^^^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
20 | #[shaku(interface = Component2Trait)]
21 | struct Component2 {
   |        ^^^^^^^^^^
note: required because it appears within the type `TestModule`
  --> tests/ui/circular_dependency_compile_time.rs:29:5
   |
29 |     TestModule {
   |     ^^^^^^^^^^
   = note: required for `TestModule` to implement `ModuleInterface`
note: required by a bound in `Module`
  --> src/module/module_traits.rs
   |
   | pub trait Module: ModuleInterface {
   |                   ^^^^^^^^^^^^^^^ required by this bound in `Module`
   = note: this error originates in the derive macro `Component` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0275]: overflow evaluating the requirement `TestModule: HasComponent<(dyn Component2Trait + 'static)>`
  --> tests/ui/circular_dependency_compile_time.rs:28:1
   |
28 | / module! {
29 | |     TestModule {
30 | |         components = [Component1, Component2],
31 | |         providers = [],
32 | |         interfaces = [],
33 | |     }
34 | | }
   | |_^
   |
note: required for `Component1` to implement `shaku::Component<TestModule>`
  --> tests/ui/circular_dependency_compile_time.rs:10:10
   |
10 | #[derive(Component)]
   |          ^^^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
11 | #[shaku(interface = Component1Trait)]
12 | struct Component1 {
   |        ^^^^^^^^^^
   = note: this error originates in the macro `module` which comes from the expansion of the derive macro `Component` (in Nightly builds, run with -Z macro-backtrace for more info)
